[metadata]
name = example-python
version = 0.1.0
author = Brian McGowan
author_email = brian.mcgowan@oreskos.com
description = A template repository for jump-starting development of Python packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brian-mcgowan/example-python
project_urls =
    Bug Tracker = https://github.com/brian-mcgowan/example-python/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
