[metadata]
name = example-flask
version = 0.0.0
author = Brian McGowan
author_email = brian.mcgowan@oreskos.com
description = A template repository for jump-starting development of Python/Flask web services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brian-mcgowan/example-python-flask
project_urls =
    Bug Tracker = https://github.com/brian-mcgowan/example-python-flask/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    dependency-injector==4.37.0
    Flask==2.0.2
    gunicorn==20.1.0
    pydantic==1.9.0

[options.packages.find]
where = src
